Fix spacing on container top and ensure mobile menu displays full menu when logged in.

--- a/style/logged_in.css
+++ b/style/logged_in.css
@@ -1,6 +1,7 @@
 #header {
 	background-color: #1F1F1F;
 	padding-bottom: 20px;
+	margin-top: 175px
 }
 
 #container {
